--- a/index.html
+++ b/index.html
@@ -4,258 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>生活シミュレーション from masaru__</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            display: flex;
-            justify-content: center;
-            padding: 20px;
-            background-color: #f0f2f5;
-            user-select: none;
-        }
-        #selected-person-panel .stat-bar.relationship {
-            display: flex;
-            align-items: center;
-            height: 15px;
-            border-radius: 3px;
-            margin-bottom: 8px;
-            background-color: #e9ecef; /* ベースの背景色 */
-            position: relative;
-            overflow: hidden; /* 子要素がはみ出さないように */
-        }
-        #selected-person-panel .stat-bar.relationship::before {
-            content: '';
-            position: absolute;
-            left: 50%;
-            top: 0;
-            bottom: 0;
-            width: 2px;
-            background-color: #aaa; 
-            transform: translateX(-50%);
-            z-index: 2;
-        }
-        #selected-person-panel .stat-bar.relationship > div {
-            height: 100%;
-            position: absolute;
-            z-index: 1;
-            transition: width 0.3s, margin-left 0.3s;
-        }
-
-        #game-world {
-            display: flex;
-            gap: 20px;
-        }
-
-        #room-container {
-            position: relative;
-            width: 360px;
-            height: 360px;
-            border: 2px solid #333;
-            background-color: #fdfdfd;
-            overflow: hidden;
-        }
-
-        #room-grid {
-            display: grid;
-            grid-template-columns: repeat(12, 30px);
-            grid-template-rows: repeat(12, 30px);
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-
-        .grid-tile {
-            width: 30px;
-            height: 30px;
-            border: 1px solid #eee;
-            box-sizing: border-box; /* 枠線を含めて30pxにする */
-        }
-        
-        .furniture-tile {
-            background-color: #ccc; /* 家具がある場所の色 */
-            border: 1px solid #999;
-        }
-        .furniture-tile.selected-for-move {
-            background-color: #ffda63; /* 移動選択中の家具の色 */
-            border: 2px dashed #e69d00;
-        }
-
-
-        #character-layer {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none; /* キャラクターがクリックを妨げないように */
-        }
-
-        .person {
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            border: 2px solid #000;
-            transition: transform 0.5s linear; /* スムーズな移動 */
-            box-sizing: border-box;
-            background-color: #fff; /* デフォルト */
-            pointer-events: auto; /* キャラクターがクリックできるように */
-            cursor: pointer;
-            
-            /* 名前表示用 */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 10px;
-            color: white;
-            text-shadow: 1px 1px 1px #000;
-        }
-        .person.male { background-color: #6495ED; } /* 男性 */
-        .person.female { background-color: #FF69B4; } /* 女性 */
-        .person.other { background-color: #90EE90; } /* その他 */
-
-        .person-speech {
-            position: absolute;
-            bottom: 22px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: white;
-            border: 1px solid #ccc;
-            padding: 2px 5px;
-            border-radius: 5px;
-            font-size: 10px;
-            white-space: nowrap;
-            opacity: 0;
-            transition: opacity 0.5s;
-        }
-
-        #ui-panel {
-            width: 300px;
-            padding: 15px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        #time-controls button, #action-controls button {
-            width: 100%;
-            padding: 10px;
-            font-size: 10px;
-            cursor: pointer;
-            border: none;
-            border-radius: 5px;
-            background-color: #007bff;
-            color: white;
-            transition: background-color 0.2s;
-        }
-        #time-controls button:hover, #action-controls button:hover {
-            background-color: #0056b3;
-        }
-        #time-controls button.ticking {
-            background-color: #dc3545;
-        }
-        #time-controls button.ticking:hover {
-            background-color: #a71d2a;
-        }
-
-        #design-mode-btn.active {
-            background-color: #28a745;
-        }
-        #design-mode-btn.active:hover {
-            background-color: #218838;
-        }
-
-        #info-panel div {
-            font-size: 16px;
-            padding: 5px 0;
-            border-bottom: 1px solid #eee;
-        }
-        #info-panel div:last-child {
-            border-bottom: none;
-        }
-
-        #selected-person-panel {
-            min-height: 100px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            padding: 10px;
-            border-radius: 5px;
-        }
-        #selected-person-panel h4 { margin: 0 0 10px 0; }
-        #selected-person-panel .stat-bar {
-            width: 100%;
-            background: #eee;
-            height: 15px;
-            border-radius: 3px;
-            margin-bottom: 3px;
-        }
-        #selected-person-panel .stat-bar > div {
-            height: 100%;
-            background: #4CAF50;
-            border-radius: 3px;
-            transition: width 0.3s;
-        }
-        .stat-label { font-size: 12px; }
-
-        /* モーダル */
-        .modal-backdrop {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0,0,0,0.5);
-            z-index: 1000;
-        }
-        .modal {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            z-index: 1001;
-            width: 300px;
-        }
-        .modal h3 { margin-top: 0; }
-        .modal label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .modal input, .modal select {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
-        .modal button {
-            padding: 8px 15px;
-            margin-right: 5px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .modal button:hover {
-            background-color: #0056b3;
-        }
-        .modal button#cancel-add-person,
-        .modal button#exit-design-mode-btn,
-        .modal button#cancel-job-btn {
-            background-color: #6c757d;
-        }
-        .modal button#cancel-add-person:hover,
-        .modal button#exit-design-mode-btn:hover,
-        .modal button#cancel-job-btn:hover {
-            background-color: #5a6268;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
